package com.ranni.connector.http;

/**
 * Title: HttpServer
 * Description:
 *
 * @Author 2Executioner
 * @Email 1205878539@qq.com
 * @Date 2022-03-22 18:51
 */
public interface Wrapper extends Container{
}
